[project]
name = "llama-mcp-agent"
version = "0.1.0"
description = "llamaindex with MCP"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "lancedb>=0.19.0",
    "llama-index>=0.12.10",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-openai-like>=0.3.3",
    "llama-index-llms-siliconflow>=0.2.1",
    "llama-index-vector-stores-lancedb>=0.3.0",
    "mcp[cli]>=1.2.0",
    "streamlit>=1.42.0",
    "watchdog>=6.0.0",
]
